--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
+    <meta name="language" content="spanish" />
+    <meta name="audience" content="all" />    
+
+    <meta name="description" content="Jeans Tovar colección de jeans de alta calidad para niños y niña, 
+    Electrificación y Digitalización industrial.Lo mejor en componentes eléctricos." />  
+    <meta name="keywrods" content="colección de jeans para niños y niñas" />
+    <meta name="robots" content="index ,all , follow" />
+    <meta name="category" content="categoria colección de jeans " /> 
+
+
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
+    <!-- <meta name="viewport" content="width=device, initial-scale=1,maximum-scale=1" />  -->    
+
+    <link  rel="icon" type="image/x-icon" href="https://i.postimg.cc/Ss0M9FWL/robot-arm-4518817.png" >
+    <meta itemprop="telephone" content="944278201" />
+
+    <title>Componentes Electricos</title>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
