--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="language" content="spanish" />
     <meta name="audience" content="all" />    
 
-    <meta name="description" content="Jeans Tovar colección de jeans de alta calidad para niños y niña, 
-    Electrificación y Digitalización industrial.Lo mejor en componentes eléctricos." />  
-    <meta name="keywrods" content="colección de jeans para niños y niñas" />
+    <meta name="description" content="Jeans Tovar colección de jeans de alta calidad para niños y niñas." />  
+    <meta name="keywrods" content="Colección de jeans para niños y niñas" />
     <meta name="robots" content="index ,all , follow" />
     <meta name="category" content="categoria colección de jeans " /> 
 
@@ -15,10 +14,10 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
     <!-- <meta name="viewport" content="width=device, initial-scale=1,maximum-scale=1" />  -->    
 
-    <link  rel="icon" type="image/x-icon" href="https://i.postimg.cc/Ss0M9FWL/robot-arm-4518817.png" >
-    <meta itemprop="telephone" content="944278201" />
+    <link  rel="icon" type="image/x-icon" href="https://i.postimg.cc/Hxbq6RFF/LOGO-TOVAR.png" >
+    <meta itemprop="telephone" content="962915371" />
 
-    <title>Componentes Electricos</title>
+    <title>Colección de jeans para niños y niñas</title>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
