--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="language" content="spanish" />
-    <meta name="audience" content="all" />    
+    <meta name="audience" content="all" />
 
-    <meta name="description" content="Jeans Tovar colección de jeans de alta calidad para niños y niñas." />  
-    <meta name="keywrods" content="Colección de jeans para niños y niñas" />
+    <meta
+      name="description"
+      content="Jeans Tovar colección de jeans de alta calidad para niños y niña."
+    />
+    <meta name="keywrods" content="Jeans Tovar" />
     <meta name="robots" content="index ,all , follow" />
-    <meta name="category" content="categoria colección de jeans " /> 
+    <meta
+      name="category"
+      content="Categoria colección de jeans para niño y niña "
+    />
 
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes"
+    />
+    <!-- <meta name="viewport" content="width=device, initial-scale=1,maximum-scale=1" />  -->
 
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
-    <!-- <meta name="viewport" content="width=device, initial-scale=1,maximum-scale=1" />  -->    
-
-    <link  rel="icon" type="image/x-icon" href="https://i.postimg.cc/Hxbq6RFF/LOGO-TOVAR.png" >
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://i.postimg.cc/Hxbq6RFF/LOGO-TOVAR.png"
+    />
     <meta itemprop="telephone" content="962915371" />
 
     <title>Colección de jeans para niños y niñas</title>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
