--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <meta
       name="description"
-      content="Jeans Tovar colección de jeans de alta calidad para niños y niña."
+      content="Jeans Tovar colección de jeans de alta calidad para niños y niñas.Galería el encanto (Gamarra)Tienda 213 , La victoria"
     />
-    <meta name="keywrods" content="Jeans Tovar" />
+    <meta name="keywrods" content="JEANS TOVAR|CONSULTA ONLINE" />
     <meta name="robots" content="index ,all , follow" />
     <meta
       name="category"
@@ -25,7 +25,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="https://i.postimg.cc/Hxbq6RFF/LOGO-TOVAR.png"
+      href="https://i.postimg.cc/vmNHCzVC/LogoTOV1.png"
     />
     <meta itemprop="telephone" content="962915371" />
 
