--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     />
     <meta itemprop="telephone" content="962915371" />
 
-    <title>JEANS TOVAR</title>
+    <title>JEANS TOVAR |CONSULTA ONLINE</title>
   </head>
   <body>
     <div id="root"></div>
